--- a/talk/invited/2020_4_psi_cam/index.html
+++ b/talk/invited/2020_4_psi_cam/index.html
@@ -365,7 +365,7 @@
     <div class="space-below"></div>
 
     <div class="article-style">
-      <!-- Embed your slides or video here using [shortcodes](https://sourcethemes.com/academic/post/writing-markdown-latex/). Further details can easily be added using *Markdown* and $\rm \LaTeX$ math code. -->
+      <p><em>TALK POSTPONED BECAUSE OF COVID-19 EPIDEMIC</em></p>
 
     </div>
 
