--- a/publication/stats_articles/2019_02_multiearly/index.html
+++ b/publication/stats_articles/2019_02_multiearly/index.html
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9"><em>Biom. J.</em>, accepted</div>
+          <div class="col-xs-12 col-sm-9"><em>Biom. J.</em>, 62(3), 550-567</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
