--- a/publication/index.html
+++ b/publication/index.html
@@ -422,6 +422,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.app/working/savvy/" target="_blank" rel="noopener">
+  Project
+</a>
+
 
 
 
