--- a/publication/stats_articles/2020_01_savvy_sap/index.html
+++ b/publication/stats_articles/2020_01_savvy_sap/index.html
@@ -375,6 +375,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.app/working/savvy/" target="_blank" rel="noopener">
+  Project
+</a>
+
 
 
 
