--- a/working/savvy/index.html
+++ b/working/savvy/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/working/savvy/">
-  <meta property="og:title" content="SAVVY: _S_urvival analysis for _A_d_V_erse events with _V_ar_Y_ing follow-up times | Kaspar Rufibach">
+  <meta property="og:title" content="SAVVY: Survival analysis for AdVerse events with VarYing follow-up times | Kaspar Rufibach">
   <meta property="og:description" content="The SAVVY project is a consortium of academic and pharmaceutical industry partners that aims to improve the analyses of adverse event (AE) data in clinical trials through the use of survival techniques appropriately dealing with varying follow-up times and competing events. Although statistical methodologies have advanced, in AE analyses often the incidence proportion, the incidence density or a non-parametric Kaplan-Meier estimator are used, which either ignore censoring or competing events. In an empirical study including randomized clinical trials from several sponsor companies, these potential sources of bias are investigated.">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>SAVVY: _S_urvival analysis for _A_d_V_erse events with _V_ar_Y_ing follow-up times | Kaspar Rufibach</title>
+  <title>SAVVY: Survival analysis for AdVerse events with VarYing follow-up times | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
 
   <div class="article-container">
     <div class="article-inner">
-      <h1 itemprop="name">SAVVY: _S_urvival analysis for _A_d_V_erse events with _V_ar_Y_ing follow-up times</h1>
+      <h1 itemprop="name">SAVVY: Survival analysis for AdVerse events with VarYing follow-up times</h1>
 
       
 
@@ -289,7 +289,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=SAVVY%3a%20_S_urvival%20analysis%20for%20_A_d_V_erse%20events%20with%20_V_ar_Y_ing%20follow-up%20times&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f"
+         href="https://twitter.com/intent/tweet?text=SAVVY%3a%20Survival%20analysis%20for%20AdVerse%20events%20with%20VarYing%20follow-up%20times&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -303,21 +303,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f&amp;title=SAVVY%3a%20_S_urvival%20analysis%20for%20_A_d_V_erse%20events%20with%20_V_ar_Y_ing%20follow-up%20times"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f&amp;title=SAVVY%3a%20Survival%20analysis%20for%20AdVerse%20events%20with%20VarYing%20follow-up%20times"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f&amp;title=SAVVY%3a%20_S_urvival%20analysis%20for%20_A_d_V_erse%20events%20with%20_V_ar_Y_ing%20follow-up%20times"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f&amp;title=SAVVY%3a%20Survival%20analysis%20for%20AdVerse%20events%20with%20VarYing%20follow-up%20times"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=SAVVY%3a%20_S_urvival%20analysis%20for%20_A_d_V_erse%20events%20with%20_V_ar_Y_ing%20follow-up%20times&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f">
+         href="mailto:?subject=SAVVY%3a%20Survival%20analysis%20for%20AdVerse%20events%20with%20VarYing%20follow-up%20times&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fworking%2fsavvy%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
