--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Senior Principal Statistical Scientist">
+  <meta name="description" content="Expert Statistical Scientist">
 
   
   <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/404.html">
@@ -74,7 +74,7 @@
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/404.html">
   <meta property="og:title" content="404 Page not found | Kaspar Rufibach">
-  <meta property="og:description" content="Senior Principal Statistical Scientist">
+  <meta property="og:description" content="Expert Statistical Scientist">
   <meta property="og:locale" content="en-us">
   
   
