--- a/talk/index.html
+++ b/talk/index.html
@@ -305,6 +305,14 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.cytel.com/hubfs/Rufibach_estimands_oncology.pdf">
+  Slides
+</a>
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.cytel.com/webinar-replay-estimands-in-oncology?utm_campaign=2020%20Consulting%20EMAIL&amp;utm_medium=email&amp;_hsenc=p2ANqtz--WN5H59zPBQopCVp-byMemvtjmBivRttoe7iWN_pcetDWhMyrW_-UdxjqoY6Ggd6S8rgrUhTglXMMhThNVuFTnMbqx0g&amp;_hsmi=88689056&amp;utm_source=hs_email&amp;utm_content=88689056&amp;hsCtaTracking=3db4881a-8653-4be6-8b0f-2be87253acee%7C42deeaa9-95eb-4bb9-b67e-ed5709cbc6db">
+  Video
+</a>
 
 
 
