--- a/publication/index.html
+++ b/publication/index.html
@@ -411,13 +411,13 @@
     Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_02_estimand_covid/" itemprop="name">Assessing the impact of COVID-19 on the objective and analysis of oncology clinical trials - application of the estimand framework</a>.
-  Submitted.
+  <em>Statistics in Biopharmaceutical Research</em>, to appear.
   
   <p>
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://oncoestimand.github.io/home/docs/onco_estimand_COVID-19_paper_v1.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
   Preprint
 </a>
 
