--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       </div>
 
       <div class="pub-publication">
-        Submitted,
+        <em>Statistics in Biopharmaceutical Research</em>, to appear,
         2020</div>
 
       <div class="pub-links">
@@ -500,7 +500,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://oncoestimand.github.io/home/docs/onco_estimand_COVID-19_paper_v1.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
   Preprint
 </a>
 
