--- a/publication/index.html
+++ b/publication/index.html
@@ -465,10 +465,10 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
-  Preprint
-</a>
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1080/19466315.2020.1785543" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -486,6 +486,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2006.04480" target="_blank" rel="noopener">
+  arxiv
+</a>
 
 </p>
 </div>
