--- a/index.html
+++ b/index.html
@@ -997,6 +997,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2020_Rufibach_PSI_estimands_oncology_covid.pdf">
+  Slides
+</a>
+
 
 
 
