--- a/talk/index.html
+++ b/talk/index.html
@@ -273,6 +273,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2020_Rufibach_PSI_estimands_oncology_covid.pdf">
+  Slides
+</a>
+
 
 
 
@@ -707,6 +711,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_SMi_Rufibach_MIRROS.pdf">
+  Slides
+</a>
 
 
 
