--- a/software/bpp/index.html
+++ b/software/bpp/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/software/bpp/">
-  <meta property="og:title" content="bpp | Kaspar Rufibach">
+  <meta property="og:title" content="R package: bpp | Kaspar Rufibach">
   <meta property="og:description" content="Kaspar Rufibach, Paul Jordan, Markus Abt (2016): bpp: Computations Around Bayesian Predictive Power">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>bpp | Kaspar Rufibach</title>
+  <title>R package: bpp | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
 
   <div class="article-container">
     <div class="article-inner">
-      <h1 itemprop="name">bpp</h1>
+      <h1 itemprop="name">R package: bpp</h1>
 
       
 
@@ -289,7 +289,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=bpp&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f"
+         href="https://twitter.com/intent/tweet?text=R%20package%3a%20bpp&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -303,21 +303,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f&amp;title=bpp"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f&amp;title=R%20package%3a%20bpp"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f&amp;title=bpp"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f&amp;title=R%20package%3a%20bpp"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=bpp&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f">
+         href="mailto:?subject=R%20package%3a%20bpp&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fbpp%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
