--- a/software/reporttools/index.html
+++ b/software/reporttools/index.html
@@ -346,7 +346,7 @@
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="/tags/"></a>
+  <a class="btn btn-primary btn-outline" href="/tags/reproducibleresearch">reproducibleresearch</a>
   
 </div>
 
@@ -358,16 +358,6 @@
 </article>
 
 
-
-<div class="article-container article-widget">
-  <div class="hr-light"></div>
-  <h3>Related</h3>
-  <ul>
-    
-    <li><a href="/software/modehunt/">R package: modehunt</a></li>
-    
-  </ul>
-</div>
 
 
 
