--- a/404.html
+++ b/404.html
@@ -252,14 +252,6 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2009_01_mle_logcon/">Maximum Likelihood Estimation of a Log-Concave Density and its Distribution Function</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008_01_2nd_marshall/">A second Marshall inequality in convex estimation</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008_01_max-domain/">On the max-domain of attraction of distributions with log-concave densities</a></li>
   </ul>
   
@@ -269,6 +261,14 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2001_01_evk/">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/">Survival analysis for AdVerse events with VarYing follow-up times - comparison of adverse event risks in randomized controlled trials in an empirical study of the SAVVY project</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/">Survival analysis for AdVerse events with VarYing follow-up times -- the one-sample case of an empirical study of the SAVVY project</a></li>
   </ul>
   
   
