--- a/index.html
+++ b/index.html
@@ -518,6 +518,14 @@
   arxiv
 </a>
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/kkmann/sample-size-calculation-under-uncertainty" target="_blank" rel="noopener">
+  Code on github
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://mybinder.org/v2/gh/kkmann/sample-size-calculation-under-uncertainty/0.2.1?urlpath=shiny/apps/sample-size-calculation-under-uncertainty/" target="_blank" rel="noopener">
+  Shiny app for sample size calculation
+</a>
+
 
       </div>
 
