--- a/publication/stats_articles/2016_01_ptsupdate/index.html
+++ b/publication/stats_articles/2016_01_ptsupdate/index.html
@@ -400,7 +400,7 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><p>The formula in Lemma A.1 has a typo: in the denominator, it should read $d<em>2$, not $d</em>\text{fin}$. The corresponding implementation in the R package <a href="http://cran.r-project.org/package=bpp" target="_blank">bpp</a> on CRAN is correct.</p>
+    <div class="article-style"><p>The formula in Lemma A.1 has a typo: in the denominator, it should read $d<em>2$, not $d</em>\text{fin}$. The corresponding implementation in the R package <a href="http://cran.r-project.org/package=bpp" target="_blank">bpp</a> on <a href="https://cran.r-project.org/" target="_blank">CRAN</a> is correct.</p>
 </div>
 
     
