--- a/software/principalstratification/index.html
+++ b/software/principalstratification/index.html
@@ -329,7 +329,7 @@
 
 
       <div class="article-style" itemprop="articleBody">
-        <p>The code in this github repository allows to reproduce all computations in the paper &ldquo;Integrating Phase 2 into Phase 3 based on an Intermediate Endpoint While Accounting for a Cure Proportion - with an Application to the Design of a Clinical Trial in Acute Myeloid Leukemia&rdquo; that appeared in Pharmaceutical Statistics.</p>
+        <p>The code in this github repository allows to reproduce all computations in the paper &ldquo;Principal Stratum Strategy: Potential Role in Drug Development&rdquo;.</p>
 
 <p><a href="https://github.com/oncoestimand/princ_strat_drug_dev" target="_blank">github repository</a><br>
 <a href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank">markdown</a><br>
