--- a/publication/stats_articles/2020_08_principal_stratification/index.html
+++ b/publication/stats_articles/2020_08_principal_stratification/index.html
@@ -372,10 +372,6 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank" rel="noopener">
-  Code
-</a>
-
 
 
 
@@ -387,6 +383,14 @@
 
 <a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2008.05406" target="_blank" rel="noopener">
   arxiv
+</a>
+
+<a class="btn btn-primary btn-outline" href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank" rel="noopener">
+  markdown
+</a>
+
+<a class="btn btn-primary btn-outline" href="https://github.com/oncoestimand/princ_strat_drug_dev" target="_blank" rel="noopener">
+  github
 </a>
 
 
