--- a/index.html
+++ b/index.html
@@ -505,10 +505,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank" rel="noopener">
-  Code
-</a>
-
 
 
 
@@ -520,6 +516,14 @@
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.05406" target="_blank" rel="noopener">
   arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank" rel="noopener">
+  markdown
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/oncoestimand/princ_strat_drug_dev" target="_blank" rel="noopener">
+  github
 </a>
 
 
