--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     
 
       <h3 class="article-title" itemprop="name">
-        <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/" itemprop="url">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- comparison of adverse event risks in randomized controlled trials</a>
+        <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/" itemprop="url">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - comparison of adverse event risks in randomized controlled trials</a>
       </h3>
 
       <div class="pub-abstract" itemprop="text">
@@ -588,6 +588,14 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.07881" target="_blank" rel="noopener">
+  arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
+  github
+</a>
+
 
       </div>
 
@@ -608,7 +616,7 @@
     
 
       <h3 class="article-title" itemprop="name">
-        <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/" itemprop="url">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- estimation of adverse event risks</a>
+        <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/" itemprop="url">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - estimation of adverse event risks</a>
       </h3>
 
       <div class="pub-abstract" itemprop="text">
@@ -649,6 +657,14 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.07883" target="_blank" rel="noopener">
+  arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
+  github
+</a>
 
 
       </div>
