--- a/publication/index.html
+++ b/publication/index.html
@@ -480,7 +480,7 @@
   <span itemprop="author">
     Kaspar Rufibach, Regina Stegherr, Claudia Schmoor, Valentine Jehl, Arthur Allignol, Annette Boeckenhoff, Cornelia Dunger-Baldauf, Lewin Eisele, Thomas Künzel, Katrin Kupas, Friedhelm Leverkus, Matthias Trampisch, Yumin Zhao, Tim Friede1, Jan Beyersmann</span>
   (2020).
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/" itemprop="name">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- comparison of adverse event risks in randomized controlled trials</a>.
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/" itemprop="name">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - comparison of adverse event risks in randomized controlled trials</a>.
   Submitted. *The first two authors contributed equally to this paper.
   
   <p>
@@ -505,6 +505,14 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.07881" target="_blank" rel="noopener">
+  arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
+  github
+</a>
+
 </p>
 </div>
 
@@ -524,7 +532,7 @@
   <span itemprop="author">
     Regina Stegherr, Claudia Schmoor, Jan Beyersmann, Kaspar Rufibach, Valentine Jehl, Andreas Brückner, Lewin Eisele, Thomas Künzel, Katrin Kupas, Frank Langer, Friedhelm Leverkus, Anja Loos, Christiane Norenberg, Florian Voss, Tim Friede</span>
   (2020).
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/" itemprop="name">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- estimation of adverse event risks</a>.
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/" itemprop="name">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - estimation of adverse event risks</a>.
   Submitted.
   
   <p>
@@ -548,6 +556,14 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.07883" target="_blank" rel="noopener">
+  arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
+  github
+</a>
 
 </p>
 </div>
