--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -261,14 +261,14 @@
   </div>
   
   <div>
-    <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- comparison of adverse event risks in randomized controlled trials</a></h2>
+    <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_07_savvy_2sample/">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - comparison of adverse event risks in randomized controlled trials</a></h2>
     <div class="article-style">
       
     </div>
   </div>
   
   <div>
-    <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) -- estimation of adverse event risks</a></h2>
+    <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/2020_06_savvy_1sample/">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY) - estimation of adverse event risks</a></h2>
     <div class="article-style">
       
     </div>
