--- a/publication/index.html
+++ b/publication/index.html
@@ -509,6 +509,10 @@
   arxiv
 </a>
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank" rel="noopener">
+  markdown
+</a>
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
   github
 </a>
@@ -559,6 +563,10 @@
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2008.07883" target="_blank" rel="noopener">
   arxiv
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank" rel="noopener">
+  markdown
 </a>
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
