--- a/publication/stats_articles/2020_06_savvy_1sample/index.html
+++ b/publication/stats_articles/2020_06_savvy_1sample/index.html
@@ -389,6 +389,10 @@
   arxiv
 </a>
 
+<a class="btn btn-primary btn-outline" href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank" rel="noopener">
+  markdown
+</a>
+
 <a class="btn btn-primary btn-outline" href="https://github.com/numbersman77/AEprobs" target="_blank" rel="noopener">
   github
 </a>
