--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       </div>
 
       <div class="pub-publication">
-        Submitted.,
+        Submitted,
         2020</div>
 
       <div class="pub-links">
