--- a/publication/index.html
+++ b/publication/index.html
@@ -429,7 +429,7 @@
     Björn Bornkamp, Kaspar Rufibach, Jianchang Lin, Yi Liu, Devan Mehrotra, Satrajit Roychoudhury, Heinz Schmidli, Yue Shentu, Marcel Wolbers</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_08_principal_stratification/" itemprop="name">Principal Stratum Strategy: Potential Role in Drug Development</a>.
-  Submitted..
+  Submitted.
   
   <p>
 
