--- a/working/savvy/index.html
+++ b/working/savvy/index.html
@@ -336,6 +336,8 @@
 <p>Roche has contributed data from three clinical trials to this project. I coordinate the Roche efforts, am actively involved in writing papers within the project, and serve as a member of the SAVVY steering committee.</p>
 
 <p><a href="https://arxiv.org/abs/1912.00263" target="_blank">Statistical Analysis Plan of SAVVY project</a><br>
+<a href="https://arxiv.org/abs/2008.07883" target="_blank">Estimation of AE risks</a> | <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a> | <a href="https://github.com/numbersman77/AEprobs" target="_blank">github</a><br>
+<a href="https://arxiv.org/abs/2008.07881" target="_blank">Comparison of AE risk in a two-arm RCT</a> | <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a> | <a href="https://github.com/numbersman77/AEprobs" target="_blank">github</a><br>
 <a href="https://arxiv.org/abs/2001.05709" target="_blank">Estimating and comparing adverse event probabilities in the presence of varying follow-up times and competing events</a> (SAVVY paper of which I am not a co-author)<br></p>
 
       </div>
