--- a/publication/index.html
+++ b/publication/index.html
@@ -770,7 +770,7 @@
             <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
-    Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou</span>
+    Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Stefan Englert, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_01_estimand_covid/" itemprop="name">Assessing the impact of COVID-19 on the objective and analysis of oncology clinical trials - application of the estimand framework</a>.
   <em>Statistics in Biopharmaceutical Research</em>, to appear. *The first four authors contributed equally to this paper.
