--- a/software/principalstratification/index.html
+++ b/software/principalstratification/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/software/principalstratification/">
-  <meta property="og:title" content="github respository for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption | Kaspar Rufibach">
+  <meta property="og:title" content="github repository and markdown file for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption | Kaspar Rufibach">
   <meta property="og:description" content="Björn Bornkamp, Kaspar Rufibach, Jianchang Lin, Yi Liu, Devan Mehrotra, Satrajit Roychoudhury, Heinz Schmidli, Yue Shentu, Marcel Wolbers (2020): Principal Stratum Strategy: Potential Role in Drug Development">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>github respository for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption | Kaspar Rufibach</title>
+  <title>github repository and markdown file for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
 
   <div class="article-container">
     <div class="article-inner">
-      <h1 itemprop="name">github respository for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption</h1>
+      <h1 itemprop="name">github repository and markdown file for different analysis methods for principal stratum estimands motivated by the principal ignorability assumption</h1>
 
       
 
@@ -287,7 +287,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=github%20respository%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f"
+         href="https://twitter.com/intent/tweet?text=github%20repository%20and%20markdown%20file%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -301,21 +301,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f&amp;title=github%20respository%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f&amp;title=github%20repository%20and%20markdown%20file%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f&amp;title=github%20respository%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f&amp;title=github%20repository%20and%20markdown%20file%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=github%20respository%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f">
+         href="mailto:?subject=github%20repository%20and%20markdown%20file%20for%20different%20analysis%20methods%20for%20principal%20stratum%20estimands%20motivated%20by%20the%20principal%20ignorability%20assumption&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2fprincipalstratification%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
