--- a/software/savvy/index.html
+++ b/software/savvy/index.html
@@ -334,8 +334,8 @@
 <p><a href="https://github.com/numbersman77/AEprobs" target="_blank">github repository</a><br>
 <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a><br>
 <a href="https://arxiv.org/abs/1912.00263" target="_blank">Statistical Analysis Plan of SAVVY project</a><br>
-<a href="https://arxiv.org/abs/2008.07883" target="_blank">Estimation of AE risks</a> | <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a> |
-<a href="https://arxiv.org/abs/2008.07881" target="_blank">Comparison of AE risk in a two-arm RCT</a> | <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a> | <a href="https://github.com/numbersman77/AEprobs" target="_blank">github</a><br></p>
+<a href="https://arxiv.org/abs/2008.07883" target="_blank">Estimation of AE risks</a><br>
+<a href="https://arxiv.org/abs/2008.07881" target="_blank">Comparison of AE risk in a two-arm RCT</a></p>
 
       </div>
 
