--- a/software/principalstratification/index.html
+++ b/software/principalstratification/index.html
@@ -333,7 +333,7 @@
 
 <p><a href="https://github.com/oncoestimand/princ_strat_drug_dev" target="_blank">github repository</a><br>
 <a href="https://oncoestimand.github.io/princ_strat_drug_dev/princ_strat_example.html" target="_blank">markdown</a><br>
-<a href="https://arxiv.org/abs/2008.05406" target="_blank">arxiv</a><br></p>
+<a href="https://arxiv.org/abs/2008.05406" target="_blank">paper</a><br></p>
 
       </div>
 
