--- a/software/savvy/index.html
+++ b/software/savvy/index.html
@@ -333,9 +333,9 @@
 
 <p><a href="https://github.com/numbersman77/AEprobs" target="_blank">github repository</a><br>
 <a href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank">markdown</a><br>
-<a href="https://arxiv.org/abs/1912.00263" target="_blank">Statistical Analysis Plan of SAVVY project</a><br>
-<a href="https://arxiv.org/abs/2008.07883" target="_blank">Estimation of AE risks</a><br>
-<a href="https://arxiv.org/abs/2008.07881" target="_blank">Comparison of AE risk in a two-arm RCT</a></p>
+<a href="https://arxiv.org/abs/1912.00263" target="_blank">Paper: Statistical Analysis Plan of SAVVY project</a><br>
+<a href="https://arxiv.org/abs/2008.07883" target="_blank">Paper: Estimation of AE risks</a><br>
+<a href="https://arxiv.org/abs/2008.07881" target="_blank">Paper: Comparison of AE risk in a two-arm RCT</a></p>
 
       </div>
 
