--- a/publication/stats_articles/2020_03_heme_estimand/index.html
+++ b/publication/stats_articles/2020_03_heme_estimand/index.html
@@ -381,6 +381,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2010.00957" target="_blank" rel="noopener">
+  arxiv
+</a>
+
 
 
           </div>
