--- a/publication/index.html
+++ b/publication/index.html
@@ -705,6 +705,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2010.00957" target="_blank" rel="noopener">
+  arxiv
+</a>
+
 </p>
 </div>
 
