--- a/talk/invited/2020_5_cde_estimands/index.html
+++ b/talk/invited/2020_5_cde_estimands/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Chinese Center for Drug Evaluation Biostatistics Symposium (invited participant)
+            Chinese Center for Drug Evaluation Biostatistics Symposium (invited talk)
             
           </div>
         </div>
