--- a/talk/invited/2020_3_cytel_estimands/index.html
+++ b/talk/invited/2020_3_cytel_estimands/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://www.cytel.com/estimands-oncology-webinar-0" target="_blank" rel="noopener">
-            Virtual panel discussion (invited participant)
+            Virtual panel discussion (invited talk)
             </a>
           </div>
         </div>
