--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         
         
         <li>
-          <a itemprop="sameAs" href="//ncbi.nlm.nih.gov/sites/entrez?term=rufibach%20k[Author]%20not%2016840625[PMID]&amp;cmd=search&amp;db=pubmed" target="_blank" rel="noopener">
+          <a itemprop="sameAs" href="//pubmed.ncbi.nlm.nih.gov/?term=rufibach&#43;k%5BAuthor%5D&#43;not&#43;16840625%5BPMID%5D&amp;sort=date" target="_blank" rel="noopener">
             <i class="ai ai-pubmed big-icon"></i>
           </a>
         </li>
