--- a/publication/stats_articles/2020_02_savvy_sap/index.html
+++ b/publication/stats_articles/2020_02_savvy_sap/index.html
@@ -367,10 +367,22 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/1912.00263" target="_blank" rel="noopener">
+  Preprint
+</a>
+
+
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1002/bimj.201900347" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
 
+
+<a class="btn btn-primary btn-outline" href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
@@ -384,10 +396,6 @@
 
 
 
-
-<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/1912.00263" target="_blank" rel="noopener">
-  arxiv
-</a>
 
 
 
