--- a/publication/index.html
+++ b/publication/index.html
@@ -782,10 +782,22 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1912.00263" target="_blank" rel="noopener">
+  Preprint
+</a>
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1002/bimj.201900347" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.github.io/AEprobs/SAVVY_AEprobs.html" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
@@ -799,10 +811,6 @@
 
 
 
-
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1912.00263" target="_blank" rel="noopener">
-  arxiv
-</a>
 
 </p>
 </div>
@@ -824,7 +832,7 @@
     Evgeny Degtyarev, Kaspar Rufibach, Yue Shentu, Godwin Yung, Michelle Casey, Stefan Englert, Feng Liu, Yi Liu, Oliver Sailer, Jonathan Siegel, Steven Sun, Rui Tang, Jiangxiu Zhou</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_01_estimand_covid/" itemprop="name">Assessing the impact of COVID-19 on the objective and analysis of oncology clinical trials - application of the estimand framework</a>.
-  <em>Statistics in Biopharmaceutical Research</em>, to appear. *The first four authors contributed equally to this paper.
+  <em>Statistics in Biopharmaceutical Research</em>, 12(4), 427-437. *The first four authors contributed equally to this paper.
   
   <p>
 
