--- a/talk/invited/2020_6_vienna/index.html
+++ b/talk/invited/2020_6_vienna/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/talk/invited/2020_6_vienna/">
-  <meta property="og:title" content="Use of multistate models to improve decision-making in clinical trials | Kaspar Rufibach">
+  <meta property="og:title" content="tbc | Kaspar Rufibach">
   <meta property="og:description" content="tbc">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Use of multistate models to improve decision-making in clinical trials | Kaspar Rufibach</title>
+  <title>tbc | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Use of multistate models to improve decision-making in clinical trials</h1>
+      <h1 itemprop="name">tbc</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Use%20of%20multistate%20models%20to%20improve%20decision-making%20in%20clinical%20trials&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f"
+         href="https://twitter.com/intent/tweet?text=tbc&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f&amp;title=Use%20of%20multistate%20models%20to%20improve%20decision-making%20in%20clinical%20trials"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f&amp;title=tbc"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f&amp;title=Use%20of%20multistate%20models%20to%20improve%20decision-making%20in%20clinical%20trials"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f&amp;title=tbc"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Use%20of%20multistate%20models%20to%20improve%20decision-making%20in%20clinical%20trials&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f">
+         href="mailto:?subject=tbc&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_6_vienna%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
