--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
       
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_6_vienna/">Use of multistate models to improve decision-making in clinical trials</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_6_vienna/">tbc</a></span>
   <div itemprop="startDate">
     
     Dec 9, 2020
