--- a/talk/invited/2020_8_effstat_podcast/index.html
+++ b/talk/invited/2020_8_effstat_podcast/index.html
@@ -79,7 +79,7 @@ We cover the following questions:
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/talk/invited/2020_8_effstat_podcast/">
-  <meta property="og:title" content="Estimands in oncology | Kaspar Rufibach">
+  <meta property="og:title" content="A deep dive into principal stratification and causal inference | Kaspar Rufibach">
   <meta property="og:description" content="Principal stratification used to play a role only in observational research but at least since the addendum of the ICH E9 guideline, this approach to causal inference became a hot topic.
 We cover the following questions:
  What is Principal Stratification? How would you describe principal stratification to a non-statistician? Where do you see the benefits of this estimand compared to the other typical strategies? Which critique points do are usually raised against this approach?">
@@ -92,7 +92,7 @@ We cover the following questions:
 
   
 
-  <title>Estimands in oncology | Kaspar Rufibach</title>
+  <title>A deep dive into principal stratification and causal inference | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -257,7 +257,7 @@ We cover the following questions:
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Estimands in oncology</h1>
+      <h1 itemprop="name">A deep dive into principal stratification and causal inference</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -267,7 +267,7 @@ We cover the following questions:
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Estimands%20in%20oncology&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f"
+         href="https://twitter.com/intent/tweet?text=A%20deep%20dive%20into%20principal%20stratification%20and%20causal%20inference&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -281,21 +281,21 @@ We cover the following questions:
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f&amp;title=Estimands%20in%20oncology"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f&amp;title=A%20deep%20dive%20into%20principal%20stratification%20and%20causal%20inference"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f&amp;title=Estimands%20in%20oncology"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f&amp;title=A%20deep%20dive%20into%20principal%20stratification%20and%20causal%20inference"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Estimands%20in%20oncology&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f">
+         href="mailto:?subject=A%20deep%20dive%20into%20principal%20stratification%20and%20causal%20inference&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_8_effstat_podcast%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -340,7 +340,7 @@ We cover the following questions:
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://theeffectivestatistician.com/a-deep-dive-into-principal-stratification-and-causal-inference/" target="_blank" rel="noopener">
-            Effective statistician podcast: A deep dive into principal stratification and causal inference (invited discussion jointly with Björn Bornkamp)
+            Effective statistician podcast (invited discussion jointly with Björn Bornkamp)
             </a>
           </div>
         </div>
