--- a/talk/invited/2020_5_basel/index.html
+++ b/talk/invited/2020_5_basel/index.html
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Location</div>
-          <div class="col-xs-12 col-sm-9">Basel, Switzerland</div>
+          <div class="col-xs-12 col-sm-9">Basel, Switzerland (virtual talk)</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
