--- a/software/mirros/index.html
+++ b/software/mirros/index.html
@@ -355,6 +355,16 @@
 
 
 
+<div class="article-container article-widget">
+  <div class="hr-light"></div>
+  <h3>Related</h3>
+  <ul>
+    
+    <li><a href="/software/cll11/">R code to plan 3-arm group-sequential trial with FWER control for pairwise comparisons via closed testing</a></li>
+    
+  </ul>
+</div>
+
 
 
 
