--- a/teaching/stats/202012_demings_estimands/index.html
+++ b/teaching/stats/202012_demings_estimands/index.html
@@ -347,9 +347,11 @@
 
 <p>Often, such type of questions are answered using simplified analyses that are only valid under strong assumptions. To make these assumptions transparent we will discuss estimands, estimation methods, impact on data collection, and experiences with Health Authorities for these scenarios. Finally, we will share our experience in implementing the addendum in large pharmaceutical companies, within biostatistics and for other partner functions.</p>
 
-<p><a href="https://demingconference.org/topic/session-j/" target="_blank">Announcement</a> of the course on the conference webpage (incl. speaker bios).</p>
-
-<p>Learn more about the oncology estimand WG on its <a href="http://www.oncoestimand.org" target="_blank">webpage</a>.</p>
+<ul>
+<li><a href="https://demingconference.org/topic/session-j/" target="_blank">Announcement</a> of the course on the conference webpage (incl. speaker bios).</li>
+<li><a href="https://oncoestimand.github.io/oncowg_webpage/talks/Deming2020_ED_KR_estimands_oncology.pdf" target="_blank">Slidedeck</a>.</li>
+<li>Learn more about the oncology estimand WG on its <a href="http://www.oncoestimand.org" target="_blank">webpage</a>.</li>
+</ul>
 
       </div>
 
