--- a/publication/index.html
+++ b/publication/index.html
@@ -732,7 +732,7 @@
     Steven Sun, Hans-Jochen Weber, Emily Butler, Kaspar Rufibach, Satrajit Roychoudhury</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_03_heme_estimand/" itemprop="name">Estimands in Hematology Trials</a>.
-  Under revision.
+  <em>Pharm. Stat.</em>, accepted.
   
   <p>
 
