--- a/teaching/nonstats/2020_6_pd_basel/index.html
+++ b/teaching/nonstats/2020_6_pd_basel/index.html
@@ -331,7 +331,7 @@
 
 
       <div class="article-style" itemprop="articleBody">
-        <p>Two-hour course for all product development colleagues in Basel (virtual event).</p>
+        <p>Two 2-hour courses for all product development colleagues in Basel (virtual event).</p>
 
       </div>
 
