--- a/publication/stats_articles/2020_03_heme_estimand/index.html
+++ b/publication/stats_articles/2020_03_heme_estimand/index.html
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">Under revision</div>
+          <div class="col-xs-12 col-sm-9"><em>Pharm. Stat.</em>, accepted</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
