--- a/publication/index.html
+++ b/publication/index.html
@@ -632,7 +632,7 @@
     Kevin Kunzmann, Michael J. Grayling, Kim May Lee, David S. Robertson, Kaspar Rufibach, James M. S. Wason</span>
   (2021).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2021_03_bayes_samplesize/" itemprop="name">A review of Bayesian perspectives on sample size derivation for confirmatory trials</a>.
-  The American Statistician, to appear.
+  <em>The American Statistician</em>, to appear.
   
   <p>
 
