--- a/publication/stats_articles/2021_03_bayes_samplesize/index.html
+++ b/publication/stats_articles/2021_03_bayes_samplesize/index.html
@@ -334,7 +334,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">The American Statistician, to appear</div>
+          <div class="col-xs-12 col-sm-9"><em>The American Statistician</em>, to appear</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
