--- a/publication/index.html
+++ b/publication/index.html
@@ -780,7 +780,7 @@
     Regina Stegherr, Jan Beyersmann, Valentine Jehl, Kaspar Rufibach, Friedhelm Leverkus, Claudia Schmoor, Tim Friede</span>
   (2020).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2020_02_savvy_sap/" itemprop="name">Survival analysis for AdVerse events with VarYing follow-up times (SAVVY): Rationale and statistical concept of a meta-analytic study</a>.
-  <em>Biom. J.</em>, to appear.
+  <em>Biom. J.</em>, 63, 650&ndash;670.
   
   <p>
 
