--- a/talk/index.html
+++ b/talk/index.html
@@ -290,7 +290,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2021_2_dia_europe/">Stop the abuse: A plea for a more principled approach to the analysis of adverse events (talk together with Tim Friede)?</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2021_2_dia_europe/">Stop the abuse: A plea for a more principled approach to the analysis of adverse events</a></span>
   <div itemprop="startDate">
     
     Mar 17, 2021
