--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 <p>I am a mathematical statistician. Through almost 20 years in various biostatistical roles I have complemented my thorough theoretical background with expertise in biostatistics. I am passionate about applying this expertise to solve problems in pharmaceutical drug development.</p>
 
-<p>I am an <a href="files/Accreditation_FENStat.pdf" target="_blank">Accredited European Statistician</a>, a qualification issued by the <a href="https://fenstats.eu/" target="_blank">The Federation of European National Statistical Societies</a>.</p>
+<p>I am an <a href="files/Accreditation_FENStat.pdf" target="_blank">Accredited European Statistician</a>, a qualification issued by <a href="https://fenstats.eu/" target="_blank">The Federation of European National Statistical Societies</a>.</p>
 
 <p><a href="files/01_Kaspar_Rufibach_CV.pdf" class="btn btn-info"><i class="fa fa-download"></i> CV</a>
 <a href="files/02_Kaspar_Rufibach_publications.pdf" class="btn btn-info"><i class="fa fa-download"></i> Publications</a>
@@ -1076,7 +1076,7 @@
       
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2021_2_dia_europe/">Stop the abuse: A plea for a more principled approach to the analysis of adverse events (talk together with Tim Friede)?</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2021_2_dia_europe/">Stop the abuse: A plea for a more principled approach to the analysis of adverse events</a></span>
   <div itemprop="startDate">
     
     Mar 17, 2021
