--- a/publication/index.html
+++ b/publication/index.html
@@ -742,23 +742,27 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/2010.00957" target="_blank" rel="noopener">
-  arxiv
+  Preprint
 </a>
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1002/pst.2108" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </p>
 </div>
