--- a/publication/stats_articles/2021_02_heme_estimand/index.html
+++ b/publication/stats_articles/2021_02_heme_estimand/index.html
@@ -367,23 +367,27 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/2010.00957" target="_blank" rel="noopener">
-  arxiv
+  Preprint
 </a>
+
+
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1002/pst.2108" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
