--- a/talk/invited/2021_2_dia_europe/index.html
+++ b/talk/invited/2021_2_dia_europe/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/talk/invited/2021_2_dia_europe/">
-  <meta property="og:title" content="Stop the abuse: A plea for a more principled approach to the analysis of adverse events (talk together with Tim Friede)? | Kaspar Rufibach">
+  <meta property="og:title" content="Stop the abuse: A plea for a more principled approach to the analysis of adverse events | Kaspar Rufibach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Stop the abuse: A plea for a more principled approach to the analysis of adverse events (talk together with Tim Friede)? | Kaspar Rufibach</title>
+  <title>Stop the abuse: A plea for a more principled approach to the analysis of adverse events | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Stop the abuse: A plea for a more principled approach to the analysis of adverse events (talk together with Tim Friede)?</h1>
+      <h1 itemprop="name">Stop the abuse: A plea for a more principled approach to the analysis of adverse events</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events%20%28talk%20together%20with%20Tim%20Friede%29%3f&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f"
+         href="https://twitter.com/intent/tweet?text=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f&amp;title=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events%20%28talk%20together%20with%20Tim%20Friede%29%3f"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f&amp;title=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f&amp;title=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events%20%28talk%20together%20with%20Tim%20Friede%29%3f"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f&amp;title=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events%20%28talk%20together%20with%20Tim%20Friede%29%3f&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f">
+         href="mailto:?subject=Stop%20the%20abuse%3a%20A%20plea%20for%20a%20more%20principled%20approach%20to%20the%20analysis%20of%20adverse%20events&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2021_2_dia_europe%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
